fixed arrow position on mobile

--- a/css/zerogrid-full.css
+++ b/css/zerogrid-full.css
@@ -1334,7 +1334,7 @@ iframe {
 	margin-top: 20px !important;
 }
 .arrow {
-	margin-top: 90px !important;
+	margin-top: 75px !important;
 	text-align:center !important;
 	margin-left: 45% !important;
 }
